<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <EditText
        android:id="@+id/new_meal_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/new_meal_name" />

    <EditText
        android:id="@+id/new_meal_category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_meal_name_edit_text"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/new_meal_category"/>

    <EditText
        android:id="@+id/new_meal_desc_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_meal_category_edit_text"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/new_meal_description"/>

    <EditText
        android:id="@+id/new_meal_dishes_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_meal_desc_edit_text"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/new_meal_dish_list"/>
</RelativeLayout>
