<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/MealItemNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal_item_name_label" />

    <TextView
        android:id="@+id/MealItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/MealItemNameLabel"
        android:layout_toEndOf="@+id/MealItemNameLabel" />

    <TextView
        android:id="@+id/MealItemCategoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MealItemNameLabel"
        android:text="@string/meal_item_category_label" />

    <TextView
        android:id="@+id/MealItemCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MealItemName"
        android:layout_toRightOf="@+id/MealItemCategoryLabel"
        android:layout_toEndOf="@+id/MealItemCategoryLabel" />

    <TextView
        android:id="@+id/MealItemDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MealItemCategoryLabel"
        android:text="@string/meal_item_description_label" />

    <TextView
        android:id="@+id/MealItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MealItemCategory"
        android:layout_toRightOf="@+id/MealItemDescriptionLabel"
        android:layout_toEndOf="@+id/MealItemDescriptionLabel" />

    <TextView
        android:id="@+id/MealItemDishesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MealItemDescriptionLabel"
        android:text="@string/menu_item_dishes_label" />

    <TextView
        android:id="@+id/MealItemDishes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MealItemDescription"
        android:layout_toRightOf="@+id/MealItemDishesLabel"
        android:layout_toEndOf="@+id/MealItemDishesLabel" />

</RelativeLayout>