<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/WelcomeImage"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/burger" />

    <RelativeLayout
        android:id="@+id/ButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/WelcomeImage"
        android:layout_alignParentBottom="true"
        android:gravity="bottom">

        <Button
            android:id="@+id/MealListButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_browse_available_meals_button" />

        <Button
            android:id="@+id/WeekPlannerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/MealListButton"
            android:text="@string/main_activity_week_planner_button" />

        <Button
            android:id="@+id/DietLogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/WeekPlannerButton"
            android:text="@string/main_activity_enter_diet_log_button" />
    </RelativeLayout>
</RelativeLayout>